# eq-isolator-4

./: .gitignore  CMakeLists.txt  README.md  README_BUILDING.md  README_DISTRIBUCION.txt  build.bat  static_build.bat
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
static_build/EQIsolator4.dir/Release/EQIsolator4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
static_build/EQIsolator4_VST3.dir/Release/: EQIsolator4.vst3.recipe
static_build/EQIsolator4_VST3.dir/Release/EQIsolator4_VST3.tlog/: CL.13060.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  EQIsolator4_VST3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
static_build/EQIsolator4_artefacts/Release/VST3/: EQIsolator4.exp
static_build/EQIsolator4_rc_lib.dir/Release/: EQIsolator4_rc_lib.lib.recipe  EQIsolator4_rc_lib.vcxproj.FileListAbsolute.txt  EQIsolator4_resources.res
static_build/EQIsolator4_rc_lib.dir/Release/EQIsolat.D7C4BB9E.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link-cvtres.read.1.tlog  Lib-link-cvtres.write.1.tlog  Lib.command.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
static_build/EQIsolator4_vst3_helper.dir/Release/: EQIsolator4_vst3_helper.exe.recipe
static_build/EQIsolator4_vst3_helper.dir/Release/EQIsolat.0F9743C0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
static_build/JUCE/: JUCEExportConfig.cmake
static_build/JUCE/tools/: JUCEExportConfig.cmake  JUCEToolsExport.cmake
static_build/JUCE/tools/x64/Custom/ALL_BUILD/: ALL_BUILD.recipe
static_build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
static_build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
static_build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
(+8 files in other folders)
